--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     image: n8nio/n8n:latest
     restart: unless-stopped
     
-    command: ["/bin/sh", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n start"]
+    command: ["/bin/ash", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n start"]
     
     depends_on:
       postgres:
@@ -102,7 +102,7 @@ services:
     container_name: n8n-worker
     restart: unless-stopped
 
-    command: ["/bin/sh", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n worker"]
+    command: ["/bin/ash", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n worker"]
     
     depends_on:
       postgres:
