docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,14 +38,12 @@ services:
   n8n-main:
     image: n8nio/n8n:latest
     restart: unless-stopped
-    
-    command: ["/bin/ash", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n start"]
-    
+   
     depends_on:
       postgres:
         condition: service_healthy
       redis:
-        condition: service_healthy
+       condition: service_healthy
     environment:
       # Queue Mode
       EXECUTIONS_MODE: queue
@@ -102,7 +100,8 @@ services:
     container_name: n8n-worker
     restart: unless-stopped
 
-    command: ["/bin/ash", "-c", "apk add --no-cache ffmpeg python3 py3-pip && pip3 install yt-dlp --break-system-packages && n8n worker"]
+    entrypoint: []
+    command: ["n8n", "worker"]
     
     depends_on:
       postgres:
