--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,10 +99,7 @@ services:
     image: n8nio/n8n:latest
     container_name: n8n-worker
     restart: unless-stopped
-
-    entrypoint: []
-    command: ["n8n", "worker"]
-    
+   
     depends_on:
       postgres:
         condition: service_healthy
@@ -150,6 +147,7 @@ services:
       - /root/server-stack/n8n_data:/home/node/.n8n
     networks:
       - n8n-network
+    command: worker
 
 networks:
   n8n-network:
